--- a/about.html
+++ b/about.html
@@ -24,16 +24,16 @@
     <div class="about">
       <h2>Welcome to My Store!</h2>
       <p>
-        Founded in 2025, My Store is dedicated to bringing you the best products
-        at affordable prices. We believe in quality, customer satisfaction, and
-        innovation.
+        Kan Website ah hian kan lo lawm a che u. In lo tangkaipui leh in lo hlawkpui theih nan
+        thil chi hrang hrang kan rawn chhawpchhuak zel dawna (eg-logo,flyer,banner,etc).
+        Chu mai bakah, induh zawng ang takin kan siam sak thei reng che u a ni.
       </p>
       <p>
-        Our mission is simple: to make shopping easy, enjoyable, and rewarding.
-        From everyday essentials to unique gifts, we’ve got something for everyone.
+        Kan thilsiam hrim hrim hi a man kan chhawpchhuak vek a. Customer te tan hriat thiam loh leh
+        buaina a awm loh nan a ni.
       </p>
       <p>
-        Thank you for choosing My Store — your trust means the world to us!
+        Kan lawm e.
       </p>
     </div>
   </div>
