--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Store | Contact Us</title>
+  <title>T3Designz | Contact Us</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <header>
     <h1>Contact Us</h1>
-    <p>We'd love to hear from you!</p>
+    <p>I duh chu rawn sawi rawh leee</p>
   </header>
 
   <nav>
