--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Store | Home</title>
+  <title>T3Designz | Home</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <header>
-    <h1>My Store</h1>
-    <p>Your one-stop shop for amazing products</p>
+    <h1>T3Designz</h1>
+    <p>Product kalsessess tak tak zawrhna</p>
   </header>
 
   <nav>
@@ -21,8 +21,8 @@
   </nav>
 
   <section class="hero">
-    <h2>Welcome to My Store</h2>
-    <p>Discover the latest and greatest products today.</p>
+    <h2>T3Designz ah kan lo lawm a che u</h2>
+    <p>I mamawh rawn zawng rawh leee</p>
     <a href="shop.html">Shop Now</a>
   </section>
 
@@ -31,20 +31,29 @@
     <div class="products">
 
       <div class="product">
-        <img src="https://via.placeholder.com/300x200" alt="Product 1">
+        <img src="C:\Users\2016j\OneDrive\Pictures\haga.webp" alt="flyer">
         <div class="product-info">
-          <h3>Product 1</h3>
+          <h3>flyer</h3>
           <p>High-quality item for everyday use.</p>
-          <button>Add to Cart - $25</button>
+          <button>Rs.25</button>
         </div>
       </div>
 
       <div class="product">
-        <img src="https://via.placeholder.com/300x200" alt="Product 2">
+        <img src="C:\Users\2016j\OneDrive\Pictures\logo.jpg" alt= "logo">
         <div class="product-info">
-          <h3>Product 2</h3>
-          <p>Stylish, comfortable, and durable.</p>
-          <button>Add to Cart - $40</button>
+          <h3>logo</h3>
+          <p>choose your own logo.</p>
+          <button>Rs.10-200</button>
+        </div>
+      </div>
+
+      <div class="product">
+        <img src="C:\Users\2016j\OneDrive\Pictures\download.jpg" alt="banner">
+        <div class="product-info">
+          <h3>banner</h3>
+          <p>A must-have for your collection.</p>
+          <button>Rs.500-3000</button>
         </div>
       </div>
 
