--- a/shop.html
+++ b/shop.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Store | Shop</title>
+  <title>T3Designz | Home</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <header>
-    <h1>Shop</h1>
-    <p>Browse our full product collection</p>
+    <h1>T3Designz</h1>
+    <p>Product kalsessess tak tak zawrhna</p>
   </header>
 
   <nav>
@@ -20,34 +20,40 @@
     <a href="contact.html">Contact</a>
   </nav>
 
+  <section class="hero">
+    <h2>T3Designz ah kan lo lawm a che u</h2>
+    <p>I mamawh rawn zawng rawh leee</p>
+    <a href="shop.html">Shop Now</a>
+  </section>
+
   <div class="container">
+    <h2 style="text-align:center; margin-bottom:20px;">Featured Products</h2>
     <div class="products">
 
-      <!-- You can duplicate this product block for more items -->
       <div class="product">
-        <img src="https://via.placeholder.com/300x200" alt="Product 1">
+        <img src="C:\Users\2016j\OneDrive\Pictures\haga.webp" alt="flyer">
         <div class="product-info">
-          <h3>Product 1</h3>
+          <h3>flyer</h3>
           <p>High-quality item for everyday use.</p>
-          <button>Add to Cart - $25</button>
+          <button>Rs.25</button>
         </div>
       </div>
 
       <div class="product">
-        <img src="https://via.placeholder.com/300x200" alt="Product 2">
+        <img src="C:\Users\2016j\OneDrive\Pictures\logo.jpg" alt= "logo">
         <div class="product-info">
-          <h3>Product 2</h3>
-          <p>Stylish, comfortable, and durable.</p>
-          <button>Add to Cart - $40</button>
+          <h3>logo</h3>
+          <p>choose your own logo.</p>
+          <button>Rs.10-200</button>
         </div>
       </div>
 
       <div class="product">
-        <img src="https://via.placeholder.com/300x200" alt="Product 3">
+        <img src="C:\Users\2016j\OneDrive\Pictures\download.jpg" alt="banner">
         <div class="product-info">
-          <h3>Product 3</h3>
+          <h3>banner</h3>
           <p>A must-have for your collection.</p>
-          <button>Add to Cart - $60</button>
+          <button>Rs.500-3000</button>
         </div>
       </div>
 
