--- a/shop.html
+++ b/shop.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>T3Designz | Home</title>
+  <title>T3Designz | Shop</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <header>
-    <h1>T3Designz</h1>
-    <p>Product kalsessess tak tak zawrhna</p>
+    <h1>Shop</h1>
+    <p>Browse our full product collection</p>
   </header>
 
   <nav>
@@ -20,40 +20,60 @@
     <a href="contact.html">Contact</a>
   </nav>
 
-  <section class="hero">
-    <h2>T3Designz ah kan lo lawm a che u</h2>
-    <p>I mamawh rawn zawng rawh leee</p>
-    <a href="shop.html">Shop Now</a>
-  </section>
-
   <div class="container">
-    <h2 style="text-align:center; margin-bottom:20px;">Featured Products</h2>
     <div class="products">
 
+      <!-- You can duplicate this product block for more items -->
       <div class="product">
-        <img src="C:\Users\2016j\OneDrive\Pictures\haga.webp" alt="flyer">
+        <img src="C:\Users\2016j\OneDrive\Pictures\haga.webp" alt="Flyer Design">
         <div class="product-info">
-          <h3>flyer</h3>
-          <p>High-quality item for everyday use.</p>
+          <h3>Flyer Design</h3>
           <button>Rs.25</button>
         </div>
       </div>
 
       <div class="product">
-        <img src="C:\Users\2016j\OneDrive\Pictures\logo.jpg" alt= "logo">
+        <img src="C:\Users\2016j\OneDrive\Pictures\logo.jpg" alt= "Logo Design">
         <div class="product-info">
-          <h3>logo</h3>
+          <h3>Logo Design</h3>
           <p>choose your own logo.</p>
-          <button>Rs.10-200</button>
+          <button>Rs.100-200</button>
         </div>
       </div>
 
       <div class="product">
-        <img src="C:\Users\2016j\OneDrive\Pictures\download.jpg" alt="banner">
+        <img src="C:\Users\2016j\OneDrive\Pictures\download.jpg" alt="Banner Design">
         <div class="product-info">
-          <h3>banner</h3>
+          <h3>Banner Design</h3>
           <p>A must-have for your collection.</p>
           <button>Rs.500-3000</button>
+        </div>
+      </div>
+
+      <div class="product">
+        <img src="C:\Users\2016j\OneDrive\Pictures\kawrr.jpg" alt="T-Shirt Printing">
+        <div class="product-info">
+          <h3>T-Shirt Printing</h3>
+          <p>A must-have for your collection.</p>
+          <button>Rs.300-900</button>
+        </div>
+      </div>
+
+      <div class="product">
+        <img src="C:\Users\2016j\OneDrive\Pictures\yoyo.jpg" alt="Jersey Design">
+        <div class="product-info">
+          <h3>Jersey Design</h3>
+          <p>A must-have for your collection.</p>
+          <button>Rs.1000-5000</button>
+        </div>
+      </div>
+
+      <div class="product">
+        <img src="C:\Users\2016j\OneDrive\Pictures\bang.jpg" alt="Wallpaper Design">
+        <div class="product-info">
+          <h3>Wallpaper Design</h3>
+          <p>A must-have for your collection.</p>
+          <button>Rs.15000-30000</button>
         </div>
       </div>
 
