--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
   <div class="container">
     <div class="about">
-      <h2>Welcome to My Store!</h2>
+      <h2>T3Designz ah kan lo lawm a che u</h2>
       <p>
         Kan Website ah hian kan lo lawm a che u. In lo tangkaipui leh in lo hlawkpui theih nan
         thil chi hrang hrang kan rawn chhawpchhuak zel dawna (eg-logo,flyer,banner,etc).
@@ -44,4 +44,5 @@
 
 </body>
 </html>
+
 
