--- a/shop.html
+++ b/shop.html
@@ -25,7 +25,7 @@
 
       <!-- You can duplicate this product block for more items -->
       <div class="product">
-        <img src="C:\Users\2016j\OneDrive\Pictures\haga.webp" alt="Flyer Design">
+        <img src="johanlalrohlua05\haga.webp" alt="Flyer Design">
         <div class="product-info">
           <h3>Flyer Design</h3>
           <button>Rs.25</button>
@@ -86,3 +86,4 @@
 
 </body>
 </html>
+
