--- a/shop.html
+++ b/shop.html
@@ -25,7 +25,7 @@
 
       <!-- You can duplicate this product block for more items -->
       <div class="product">
-        <img src="johanlalrohlua05/my-store/https://www.google.com/imgres?q=flyers%20design&imgurl=https%3A%2F%2Funblast.com%2Fwp-content%2Fuploads%2F2020%2F03%2FA4-Corporate-Flyer-Template-1.jpg&imgrefurl=https%3A%2F%2Funblast.com%2Ffree-a4-corporate-flyer-template-psd%2F&docid=beR2Yd4kPQn5qM&tbnid=uNBvEFxbJW-v9M&vet=12ahUKEwjDhPKkv7yQAxWjWXADHeojGgAQM3oECFUQAA..i&w=2000&h=1500&hcb=2&ved=2ahUKEwjDhPKkv7yQAxWjWXADHeojGgAQM3oECFUQAAp" alt="Flyer Design">
+        <img src="C:\Users\2016j\OneDrive\Pictures\haga.webp" alt="Flyer Design">
         <div class="product-info">
           <h3>Flyer Design</h3>
           <button>Rs.25</button>
