--- a/shop.html
+++ b/shop.html
@@ -25,7 +25,7 @@
 
       <!-- You can duplicate this product block for more items -->
       <div class="product">
-        <img src="C:\Users\2016j\OneDrive\Pictures\haga.webp" alt="Flyer Design">
+        <img src="C:\Users\2016j\OneDrive\Desktop\my-store\image\haga.webp" alt="Flyer Design">
         <div class="product-info">
           <h3>Flyer Design</h3>
           <button>Rs.25</button>
@@ -86,5 +86,6 @@
 
 </body>
 </html>
+
 
 
